<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".DailyBrushActivity">

    <ImageButton
        android:id="@+id/go_back_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/solid_blue_rounded"
        android:padding="16dp"
        android:scaleType="fitCenter"
        app:tint="@android:color/white"
        android:src="@drawable/go_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/well_done_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/well_done"
        android:textColor="@android:color/black"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/qtrobot_image"
        app:layout_constraintEnd_toEndOf="@+id/qtrobot_image"
        app:layout_constraintStart_toStartOf="@+id/qtrobot_image" />

    <ImageView
        android:id="@+id/qtrobot_image"
        android:layout_width="631dp"
        android:layout_height="866dp"
        android:src="@drawable/qtrobot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.309" />

    <LinearLayout
        android:id="@+id/streak_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qtrobot_image">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/youve_brushed_your_teeth"
            android:textColor="@android:color/black"
            android:textSize="60sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/streak_dot_1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="16dp"
                android:src="@drawable/circle_white_black_border" />

            <ImageView
                android:id="@+id/streak_dot_2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="16dp"
                android:src="@drawable/circle_white_black_border" />

            <ImageView
                android:id="@+id/streak_dot_3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="16dp"
                android:src="@drawable/circle_white_black_border" />

            <ImageView
                android:id="@+id/streak_dot_4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="16dp"
                android:src="@drawable/circle_white_black_border" />

            <ImageView
                android:id="@+id/streak_dot_5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="16dp"
                android:src="@drawable/circle_white_black_border" />

            <ImageView
                android:id="@+id/streak_dot_6"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="16dp"
                android:src="@drawable/circle_white_black_border" />

            <ImageView
                android:id="@+id/streak_dot_7"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="16dp"
                android:src="@drawable/circle_white_black_border" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/days_in_a_row"
            android:textColor="@android:color/black"
            android:textSize="60sp" />

        <LinearLayout
            android:id="@+id/bottom_navigation_manual"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:orientation="horizontal" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>